# moonplayer

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  MoonPlayer_Helper.user.js  NEWS.md  README.md  linuxdeploy-plugin-qtfix.sh  moonplayer.pro
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  linux.yml  windows.yml
.travis/: appimage-bionic.yml  appimage-trusty.yml  appimage.yml  deploy-linux.sh  deploy-osx.sh  deploy-windows.sh  macdeploy.sh  moonplayer-bionic.yml  moonplayer-trusty.yml  qt-installer-linux.qs  qt-installer-windows.qs  qt-installer.qs  travis-cache-windows.sh  travis-install-qt-linux.sh  travis-install-qt-windows.sh  travis-install-qt.sh  win_installer.iss  windeploy.sh
cmake/: FindMPV.cmake  MacOSXBundleInfo.plist.in  QtCommon.cmake
debian/: README.Debian  changelog  control  copyright  files  rules
res/: AppIcon.icns  com.github.coslyk.MoonPlayer.appdata.xml  com.github.coslyk.MoonPlayer.desktop
scripts/: deploy-linux.sh  deploy-macos-11.sh  deploy-macos.sh  deploy-osx.sh  deploy-windows-2019.sh  deploy-windows.sh  travis-install-mpv.bat  travis-install-mpv.sh  travis-install-qt.sh  win-install-mpv.bat  win-install-mpv.sh  win-install-qt.sh  win-install-qt5.sh  win_installer.iss
src/: CMakeLists.txt  Info.plist  Version  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  accessManager.cpp  accessManager.h  accessmanager.cpp  accessmanager.h  application.cpp  application.h  browser.cpp  browser.h  browser.ui  chromiumdebugger.cpp  chromiumdebugger.h  classicplayer.cpp  classicplayer.h  classicplayer.ui  classicwindow.cpp  classicwindow.h  classicwindow.ui  clipboard.cpp  clipboard.h  com.github.coslyk.MoonPlayer.appdata.xml  com.github.coslyk.MoonPlayer.desktop  console.cpp  console.h  cookiejar.cpp  cookiejar.h  cutterbar.cpp  cutterbar.h  cutterbar.ui  danmaku2ass  danmaku2ass.py  danmakuLoader.cpp  danmakuLoader.h  danmakudelaygetter.cpp  danmakudelaygetter.h  (+189 more)
src/debian/: README.source  changelog  control  rules
src/l10n/: l10n.qrc  zh_CN.ts
src/platform/: application.h  application_mac.cpp  application_no_mac.cpp  detectOpengl.h  detectOpengl_linux.cpp  detectOpengl_mac.cpp  detectOpengl_win.cpp  detectopengl.h  detectopengl_linux.cpp  detectopengl_mac.cpp  detectopengl_win.cpp  graphics.h  graphics_linux.cpp  graphics_mac.cpp  graphics_win.cpp  localserver_no_mac.cpp  localserver_no_mac.h  localsocket_no_mac.cpp  paths.cpp  paths.h  paths_linux.cpp  paths_mac.cpp  paths_win.cpp  terminal_linux.cpp  terminal_mac.cpp  terminal_win.cpp
src/plugins/: danmaku2ass.py  danmaku2ass_py2.py  danmaku2ass_py3.py  flvcd_parser.py  hls_downloader.py  moonplayer_utils.py  plugin_acfun.py  plugin_bilibili.py  plugin_qq.py  plugin_sina.py  plugin_tudou.py  plugin_youku.py  plugin_youku_childlist.py  res_douban.py  res_soku_movie.py  res_soku_tv.py  res_youku_movie.py  res_youku_tv.py  res_youtube.py  searcher_soku.py  searcher_youku.py  upgrade_extras.py  utils.py  ykdl_patched.py
src/qml/: Color.qml  ConsoleDialog.qml  ControlBar.qml  CoverArea.qml  CustomImageButton.qml  CustomSlider.qml  CustomTextInput.qml  CustomWindow.qml  DanmakuOptionsDialog.qml  Downloader.qml  Explorer.qml  FileOpenDialog.qml  FontDialog.qml  ImageButton.qml  MessageDialog.qml  OpenUrlDialog.qml  Playlist.qml  SelectionDialog.qml  Settings.qml  ShortcutsDialog.qml  Sidebar.qml  SkinColor.qml  SubtitlesAndDanmaku.qml  TextInputDialog.qml  VideoOptions.qml  VideoOptionsDialog.qml  main.qml
src/qml/classicUI/CustomWidgets/: CustomDialog.qml  CustomImageButton.qml  CustomTabDialog.qml  CustomWindow.qml  ToolBar.qml  qmldir
src/qml/modernUI/CustomWidgets/: CustomDialog.qml  CustomImageButton.qml  CustomTabDialog.qml  CustomWindow.qml  ToolBar.qml  qmldir
src/scripts/: danmaku2ass.py  hls_downloader.py  update-parsers.ps1  update-parsers.sh  upgrade-plugins.sh  upgrade-ykdl.sh  upgrade-youtubedl.sh
src/skins/black/: fixed_sizes  skin.qss  skin_hidpi.qss  skin_normal.qss
src/skins/blue/: .directory  fixed_sizes  skin.qss
src/skins/default/: fixed_sizes  skin.qss
src/translations/: moonplayer_zh_CN.qm  moonplayer_zh_CN.ts
src/unblockcn/: header_urls.txt  proxy_urls.txt
